# COAST

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  analyze_hf_datasets.py  analyze_hf_samples.py  analyze_hf_samples2.py  benchmark_results.json  collect_activations_robocasa.py  eval_robocasa.py  pyproject.toml  smoke_test_collect_activations.py  smoke_test_eval.py  train_libero.sh  upload_activations.py
.claude/: settings.json
.claude/hooks/: gpu-status.sh  post-compact.sh  post-edit-lint.sh  pre-commit-lint.sh  pre-stop-verify.sh  session-env.sh
.claude/rules/: groot-env.md  libero-env.md  robocasa-env.md  tests.md
.github/workflows/: test.yml
denoising_step_exp/: README.md  eval_denoising_steps.py  exp1_denoising.py  exp2_adarms.py  exp3_denoising_cka.py  exp4_denoising_steps.py  run_denoising_ablation.sh
docs/: activation_collection.md  activation_collection_implementation.md  benchmark_activations_plan.md  mechanistic_interpretability_plan.md  pi05_architecture.md  remote_inference.md
examples/: convert_jax_model_to_pytorch.py
examples/aloha_real/: compose.yml
examples/aloha_sim/: compose.yml
examples/droid/: README.md  README_train.md  main.py
examples/libero_env/: README.md  collection_session.py  eval_all.py  eval_parallel.py  filtered_bc_client.py  main.py  pyproject.toml
examples/metaworld/: README.md  collect_activations.py  collect_activations_fast.py  collect_activations_v2.py  eval_all.py  main.py  test_metaworld_envs.py
examples/robocasa_env/: README.md  eval_all.py  filtered_bc_client.py  main.py  pyproject.toml
examples/robocasa_env/figures/: results_75000.json
examples/robocasa_env/tests/: test_eval_all.py  test_robocasa_env.py
examples/robolab_env/: README.md  eval_all.py  main.py  pyproject.toml  tasks.py
examples/robolab_env/tests/: conftest.py  test_robolab_env.py
examples/simple_client/: compose.yml
experiments/: README.md  conceptor_diagnostic.py  conceptor_steering.py  make_45ep_latex.py  methodology.tex  probe_15env_structure.py  record_steering_video.py  run_steering.sh  submit_45ep_all.sh  submit_all_tasks.sh  summarize_activations.py
experiments/analysis/: transfer_subspace_analysis.py
experiments/conceptor_results_v2/: probe_results.csv
experiments/droid/: README.md  compute_conceptors.py  run_end_to_end.sh  select_parameters.py  selected_params.json
experiments/filtered_bc/: README.md  _serve_policy_nocompile.py  dataset.py  launch_pi0fast.sh  make_report.py  merge_save.py  run_filtered_bc.py  run_libero.sh  run_libero_pi0fast.sh  run_metaworld.sh  run_metaworld_pi0fast.sh  run_robocasa.sh  run_robocasa_groot.sh  sbatch_pi0fast.sh  sbatch_robocasa_groot.sh  train.py
experiments/groot_robocasa/: .gitignore  README.md  collect_missing_activations.sh  run_steering_optimized.sh  run_steering_sweep.sh
experiments/libero/: README.md  best_configs.json  compute_conceptors.py  find_best_configs.py  run_end_to_end.sh
experiments/mech_interp_analysis/: aggregate_results_table.tex  analysis_1_spectra.py  analysis_2_overlap.py  analysis_3_projection.py  analysis_4_dynamics.py  analysis_5_manifold.py  analysis_6_task_space.py  master_figure.py  mech_interp_analysis.tex  run_all_analyses.py  shared_utils.py  steering_results_table.tex  submit_a6.sh  submit_analyses.sh
experiments/metaworld/: README.md  best_configs.json  compute_conceptors.py  find_best_configs.py  run_end_to_end.sh
experiments/pi05_droid/: README.md  build_conceptors.py  conceptor_steering.py  run_steering.sh  select_parameters.py  selected_params.json
experiments/pi05_robocasa/: README.md
experiments/pi0_fast_libero/: collect_activations.sh  train.sh
experiments/pi0_fast_metaworld/: collect_activations.sh  train.sh
experiments/preference_bc/: README.md  dataset.py  dpo_loss.py  run_libero.sh  run_metaworld.sh  run_preference_bc.py  run_robocasa.sh  train.py
experiments/robocasa/: README.md  best_configs.json  compute_conceptors.py  compute_groot_conceptors.py  find_best_configs.py  run_end_to_end.sh
experiments/robocasa_steering/: README.md  add_per_step_alphas.py  build_and_select_all.py  build_conceptors.py  example_eval.sh  run_steering.sh  select_parameters.py  select_parameters_per_task.py  (+1 more)
groot_env/: README.md  activation_collector.py  groot_activation_collector.py  groot_adapter.py  groot_steering.py  pyproject.toml  serve.py  verify_activations.py  websocket_policy_server.py
groot_env/tests/: conftest.py  test_groot_activation_collector.py  test_groot_activations.py  test_groot_adapter.py  test_groot_steering.py
scripts/: benchmark_activations.py  collect_activations.py  collect_activations_v2.py  convert_libero_data_to_lerobot.py  dp_eval_smoke.py  eval_denoising_steps.py  generate_metaworld_dataset.py  run_denoising_ablation.sh  serve_policy.py  train_pytorch.py  upload_activations_by_task.sh
tests/: test_action_equivalence.py  test_activation_collector.py  test_activations.py  test_activations_fast.py  test_activations_v2.py  test_collection_session.py  test_conceptors.py  test_denoising_steps.py  test_jax_pytorch_equivalence.py  test_pi0_fast_action_equivalence.py  test_serve_policy.py  test_steering.py
(+500 files in other folders)
