[project]
name = "groot_env"
version = "0.1.0"
description = "Isolated venv that serves NVIDIA GR00T N1.5 via openpi's WebSocket protocol"
readme = "README.md"
# GR00T N1.5 recommends Python 3.10 (its pyproject allows >=3.10, but the NVIDIA
# README install guide pins 3.10 in a conda env). Sticking with 3.10 here to
# match what the NVIDIA team tests against.
requires-python = ">=3.10,<3.11"
dependencies = [
    # gr00t[base] pulls in torch==2.5.1, torchvision==0.20.1, tensorflow==2.15.0,
    # diffusers==0.30.2, torchcodec==0.1.0, opencv_python==4.8.0.74, pyzmq.
    "gr00t[base]",
    # For WebsocketPolicyServer + base_policy. Editable install keeps us in sync
    # with the root repo's openpi-client package.
    "openpi-client",
    "tyro>=0.9",
]

# flash-attn is required at SERVE time (N1.5's backbone uses it), but not at
# unit-test or import time. Build-from-source requires CUDA/nvcc which CPU CI
# runners don't have, so it's NOT pulled by `uv sync`. Install it separately
# per the groot_env/README.md step-3:
#     uv pip install --no-build-isolation flash-attn==2.7.1.post4
# That's also NVIDIA's official install recipe for N1.5. The
# `--no-build-isolation` flag uses the already-installed torch directly, so no
# `[tool.uv.extra-build-dependencies]` hint is required here.

[tool.uv.sources]
gr00t = { path = "../third_party/Isaac-GR00T", editable = true }
openpi-client = { path = "../packages/openpi-client", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "manual: slow test that requires a real checkpoint + GPU; skipped in CI",
]
